# numalogic

./: .codecov.yml  .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  USERS.md  a.txt  dump.rdb  index.html  log.conf  mkdocs.yml  numalogic_prometheus-0.8.0-py3-none-any.whl  pyproject.toml  setup.py  sitemap.xml  some_imp.csv  tmp.txt
apps/numa-udfs/: .coveragerc  .dockerignore  Dockerfile  log.conf  numalogic-0.11a0-py3-none-any.whl  numalogic_connectors-0.11a0-py3-none-any.whl  numalogic_registry-0.11a0-py3-none-any.whl  pyproject.toml
apps/numa-udfs/.devcontainer/: Dockerfile  devcontainer.json
apps/numa-udfs/src/: __init__.py  __main__.py  _base.py  _config.py  constants.py  factory.py  inference.py  payloadtx.py  postprocess.py  preprocess.py  staticthresh.py  tools.py
apps/numa-udfs/src/backtest/: __init__.py  _constants.py  _prom.py
apps/numa-udfs/src/trainer/: __init__.py  _base.py  _druid.py  _prom.py  _rds.py
apps/numa-udfs/tests/: test_backtest.py  test_factory.py  test_inference.py  test_main.py  test_numaflow.py  test_pipeline.py  test_postprocess.py  test_preprocess.py  test_staticthresh.py  test_trainer.py
apps/numa-udfs/tests/resources/: _config.yaml  _config4.yaml
examples/numalogic-simple-pipeline/: .dockerignore  Dockerfile  Makefile  README.md  numa-pl.yaml  pipeline.yaml  pyproject.toml  requirements.txt  simple-numalogic-pipeline.yaml  simple-numalogic-pl.yaml  starter.py
examples/numalogic-simple-pipeline/http/: http.yaml
examples/numalogic-simple-pipeline/ml_steps/: README.md  __init__.py  aepipeline.py  dtypes.py  factory.py  pipeline.py  pl_factory.py  tools.py  udf_factory.py  utility.py  utlity_function.py
examples/numalogic-simple-pipeline/ml_steps/resources/: train_data.csv
examples/numalogic-simple-pipeline/ml_steps/resources/ml_model/: model.pth
examples/numalogic-simple-pipeline/ml_steps/resources/train_data/: train_data.csv
examples/numalogic-simple-pipeline/ml_steps/udf/: __init__.py  inference.py  input.py  postprocess.py  preprocess.py  train.py
examples/numalogic-simple-pipeline/src/: __init__.py  factory.py  udf_factory.py  utils.py
examples/numalogic-simple-pipeline/src/resources/: train_data.csv
examples/numalogic-simple-pipeline/src/udf/: __init__.py  inference.py  postprocess.py  preprocess.py  threshold.py  train.py
libs/connectors/: pyproject.toml
libs/connectors/nlconnectors/: factory.py
libs/connectors/nlconnectors/druid/: _druid.py  aggregators.py
libs/connectors/nlconnectors/rds/: _base.py  _rds.py
libs/connectors/nlconnectors/rds/db/: factory.py  mysql_fetcher.py
libs/connectors/tests/: data.csv  test_druid.py  test_prometheus.py
libs/connectors/tests/rds/: test_base.py  test_rds.py
libs/connectors/tests/rds/db/: test_mysql_fetcher.py
libs/connectors/tests/utils/: test_enum.py
libs/connectors/tests/utils/aws/: test_aws_boto3_client_manager.py  test_config.py  test_db_configurations.py  test_sts_client_manager.py
libs/numalogic-registry/: .coveragerc  .pre-commit-config.yaml  makefile  pyproject.toml
libs/numalogic-registry/nlregistry/: __init__.py  dynamodb_registry.py  factory.py  mlflow_registry.py  redis_registry.py
libs/numalogic-registry/requirements/: requirements-dev.txt  requirements.txt
libs/numalogic-registry/tests/: test_dynamodb_registry.py  test_mlflow_registry.py  test_optdeps.py  test_serialize.py
libs/registry/: pyproject.toml
libs/registry/nlregistry/: __setup__.py  artifact.py  dynamodb_registry.py  localcache.py  mlflow_registry.py  redis_registry.py
libs/registry/tests/: test_cache.py  test_dynamodb_registry.py  test_mlflow_registry.py  test_optdeps.py  test_redis_registry.py
src/core/: pyproject.toml
src/core/numalogic/: _constants.py  base.py
src/core/numalogic/backtest/: _prom.py
src/core/numalogic/config/: __init__.py  _config.py  factory.py
src/core/numalogic/models/autoencoder/: __init__.py
src/core/numalogic/models/forecast/: __init__.py
src/core/numalogic/models/threshold/: _static.py
src/core/numalogic/models/vae/: __init__.py  (+1 more)
src/core/numalogic/synthetic/: __init__.py
src/core/numalogic/tools/: data.py  exceptions.py  types.py
src/core/numalogic/transforms/: __init__.py  _postprocess.py  _scaler.py  _stateless.py
src/nlconnectors/connectors/: __init__.py  __setup__.py  _config.py  prometheus.py  pyproject.toml  redis.py
src/nlconnectors/connectors/druid/: __init__.py  _druid.py
src/nlconnectors/connectors/rds/: __init__.py  _base.py  _rds.py
udf/anomaly-detection/: .codecov.yml  .coveragerc  .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  starter.py
udf/anomaly-detection/anomalydetection/: __init__.py  _config.py  _constants.py  entities.py  factory.py  tools.py  watcher.py
udf/anomaly-detection/anomalydetection/clients/: __init__.py  _config.py  prometheus.py  redis.py  sentinel.py
udf/anomaly-detection/anomalydetection/udf/: __init__.py  aggregate.py  keying.py  preprocess.py  window.py  window_old.py
udf/anomaly-detection/config/default-configs/: config.yaml  numalogic_config.yaml  pipeline_config.yaml
udf/anomaly-detection/config/user-configs/: config.yaml
udf/anomaly-detection/requirements/: requirements-torch.txt
udf/anomaly-detection/src/: __init__.py  _config.py  _constants.py  entities.py  factory.py  tools.py  watcher.py
udf/anomaly-detection/src/connectors/: __init__.py  _config.py  druid.py  entities.py  prometheus.py  redis.py  sentinel.py
udf/anomaly-detection/src/udf/: __init__.py  inference.py  postprocess.py  preprocess.py  threshold.py  trainer.py
udf/anomaly-detection/src/udsink/: __init__.py  train.py
udf/anomaly-detection/tests/: __init__.py  test_client.py  test_druid.py  test_factory.py  test_prometheus.py  test_tools.py  test_trainer.py  test_watcher.py  tools.py
udf/anomaly-detection/tests/udf/: test_inference.py  test_postprocess.py  test_preprocess.py  test_threshold.py  test_trainer.py  test_window.py
(+498 files in other folders)
