[tool.poetry]
name = "numa-udfs"
version = "0.11a0"
description = ""
authors = ["Avik Basu <ab93@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
#numalogic = "~0.11.0"
numalogic = {path = "../../dist/numalogic-0.11a0-py3-none-any.whl"}
#numalogic-connectors = "*"
numalogic-connectors = {path = "../../libs/connectors/dist/numalogic_connectors-0.11a0-py3-none-any.whl"}
#numalogic-registry = "*"
numalogic-registry = {path = "../../libs/registry/dist/numalogic_registry-0.11a0-py3-none-any.whl"}
pynumaflow = "~0.6"
structlog = "^24.1.0"
prometheus_client = "^0.18.0"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.4.2"
black = "^23.0"
pytest = "^7.1"
pytest-cov = "^4.0"
torchinfo = "^1.7.2"
ruff = "~0.0.275"
pre-commit = "^3.3.1"
fakeredis = "^2.11.2"
freezegun = "^1.2.2"
pympler = "^1.0.1"
moto = "~4.1"
deepdiff = "^6.5.0"
pytest-mock = "^3.12.0"


[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.idea
  | _build
  | buck-out
  | build
  | dist
  | examples/.*/venv
  | tests/.*/setup.py
)/
'''

[tool.ruff]
line-length = 100
src = ["numalogic", "tests"]
select = ["E", "F", "W", "C901", "NPY", "RUF", "TRY", "G", "PLE", "PLW", "UP", "ICN", "RET", "Q", "PLR", "D"]
ignore = ["TRY003", "TRY301", "RUF100", "D100", "D104", "PLR2004", "D102", "D401", "D107", "D205", "D105", "PLW0603", "PLR0915", "UP035"]
target-version = "py311"
show-fixes = true
show-source = true

[tool.ruff.per-file-ignores]
"tests/*" = ["D101", "D103"]

[tool.ruff.pylint]
max-args = 15
max-statements = 30

[tool.ruff.pydocstyle]
convention = "numpy"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
