[tool.poetry]
name = "Simple Numalogic Pipeline"
version = "0.1.0"
description = "Simple Numalogic Pipeline"
authors = ["s0nicboOm <i.kushalbatra@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
dataclasses-json = "^0.5.6"
cachetools = "^5.0.0"
pynumaflow = "^0.2.4"
numalogic = "^0.2.5"
uuid = "^1.30"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
