[tool.poetry]
name = "numalogic-simple-demo"
version = "0.1.0"
description = "Simple ML Pipeline illustrating Numalogic library usage."
authors = ["s0nicboOm <i.kushalbatra@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
dataclasses-json = "^0.5.6"
cachetools = "^5.0.0"
pynumaflow = "~0.2.4"
numalogic = {git = "https://github.com/s0nicboOm/numalogic", extras = ["mlflow", "mlflow-skinny"], rev = "test-mlflow"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
