[tool.poetry]
name = "numalogic-simple-demo"
version = "0.1.0"
description = "Simple ML Pipeline illustrating Numalogic library usage."
authors = ["s0nicboOm <i.kushalbatra@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
dataclasses-json = "^0.5.6"
cachetools = "^5.0.0"
# torch = "~1.12"
protobuf = "~3.20"
pynumaflow = "~0.2.6"
# lightning = { version = "^1.8", extras = ["pytorch"]}
numalogic = {git = "https://github.com/numaproj/numalogic.git", extras = ["mlflow-skinny"], rev = "example-0.3"}

[tool.poetry.group.mlflowserver]
optional = true

[tool.poetry.group.mlflowserver.dependencies]
mlflow = "^1.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
