[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "numalogic-connectors"
version = "0.11a0"
description = "Data Connectors for Numalogic."
authors = [
    {name = "Numalogic Developers"}
]
readme = "README.md"
maintainers = [
    { name = "Avik Basu", email = "avikbasu93@gmail.com"},
    { name = "Vigith Maurice", email = "vigith@gmail.com"}
]
classifiers = [
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
requires-python = ">= 3.9"
dependencies = [
    "requests>=2.0",
    "orjson>=3.9",
    "pydruid>=0.6",
    "boto3>=1.20",
    "PyMySQL>=1.0",
    "redis[hiredis]>=5.0",
    "omegaconf>=2.3",
]

[project.optional-dependencies]
dev = [
    "moto>=4.1",
    "black>23.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.0.275",
    "pre-commit>=3.3",
    "pytest-mock>=3.12",
    "freezegun>=1.2",
    "deepdiff>=6.5.0",
    "fakeredis>=2.10",
]


[project.urls]
Repository = "https://github.com/numaproj/numalogic"
Documentation = "https://numalogic.numaproj.io/"
Homepage = "https://numalogic.numaproj.io/"
