[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "numalogic-registry"
version = "0.11a0"
description = "Collection of operational Machine Learning models and tools."
authors = [
    {name = "Numalogic Developers"}
]
readme = "README.md"
maintainers = [
    { name = "Avik Basu", email = "avikbasu93@gmail.com"},
    { name = "Vigith Maurice", email = "vigith@gmail.com"}
]
classifiers = [
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
requires-python = ">= 3.9"
dynamic = ["dependencies", "optional-dependencies"]


[project.urls]
Repository = "https://github.com/numaproj/numalogic"
Documentation = "https://numalogic.numaproj.io/"
Homepage = "https://numalogic.numaproj.io/"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements/requirements-dev.txt"] }}
