[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlregistry"
version = "0.10.1a0"
description = "Collection of operational Machine Learning models and tools."
authors = [
    {name = "Numalogic Developers"}
]
readme = "README.md"
maintainers = [
    { name = "Avik Basu", email = "avikbasu93@gmail.com"},
    { name = "Vigith Maurice", email = "vigith@gmail.com"}
]
classifiers = [
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
requires-python = ">= 3.9"
dependencies = [
    "numalogic",
    "redis[hiredis]>=4.0",
    "mlflow-skinny>2.0",
    "boto3>=1.20",
]

[project.optional-dependencies]
dev = [
    "fakeredis>=2.10",
    "moto[dynamodb,s3]>=5.0",
    "black>23.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.0.275",
    "pre-commit>=3.3",
    "pytest-mock>=3.12",
    "torchinfo"
]


[project.urls]
Repository = "https://github.com/numaproj/numalogic"
Documentation = "https://numalogic.numaproj.io/"
Homepage = "https://numalogic.numaproj.io/"