[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "numalogic"
version = "0.10.1a0"
description = "Collection of operational Machine Learning models and tools."
authors = [
    {name = "Numalogic Developers"}
]
readme = "README.md"
maintainers = [
    { name = "Avik Basu", email = "avikbasu93@gmail.com"},
    { name = "Vigith Maurice", email = "vigith@gmail.com"}
]
classifiers = [
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">= 3.9"
dependencies = [
    "numpy>=1.22",
    "pandas[performance]>=2.0",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "pytorch-lightning>=2.0",
]

[project.optional-dependencies]
dev = [
    "matplotlib>=3.4",
    "black>23.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "torchinfo>=1.7",
    "ruff>=0.0.275",
    "pre-commit>=3.3",
    "pytest-mock>=3.12",
]
jupyter = [
    "jupyter>=1.0",
    "ipykernel>=6.15",
    "ipympl>=0.9",
    "ipython-autotime>=0.3",
    "black[jupyter]"
]


[project.urls]
Repository = "https://github.com/numaproj/numalogic"
Documentation = "https://numalogic.numaproj.io/"
Homepage = "https://numalogic.numaproj.io/"


#[tool.setuptools]
## packages = ["numalogic"]
#package-dir = {"numalogic" = "../numalogic"}


#[tool.setuptools.packages.find]
#include = ["numalogic*", "numalogic.*"]
#exclude = ["*egg-info*", "build*", "dist*", "docs*", "tests*"]