[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "numalogic-connectors"
version = "0.10.0"
description = "Collection of operational Machine Learning models and tools."
authors = [
    {name = "Numalogic Developers"}
]
readme = "README.md"
maintainers = [
    { name = "Avik Basu", email = "avikbasu93@gmail.com"},
    { name = "Vigith Maurice", email = "vigith@gmail.com"}
]
classifiers = [
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">= 3.9"
dependencies = [
    "numpy>=1.22",
    "pandas[performance]>=2.0",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "pytorch-lightning>=2.0",
]

[project.urls]
Repository = "https://github.com/numaproj/numalogic"
Documentation = "https://numalogic.numaproj.io/"
Homepage = "https://numalogic.numaproj.io/"


[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.idea
  | _build
  | buck-out
  | build
  | dist
  | examples/.*/venv
  | tests/.*/setup.py
)/
'''

[tool.ruff]
line-length = 100
src = ["numalogic", "tests"]
select = ["E", "F", "W", "C901", "NPY", "RUF", "TRY", "G", "PLE", "PLW", "UP", "ICN", "RET", "Q", "PLR", "D"]
ignore = ["TRY003", "TRY301", "RUF100", "D100", "D104", "PLR2004", "D102", "D401", "D107", "D205", "D105", "PLW0603", "PLR0915", "UP035"]
target-version = "py39"
show-fixes = true
show-source = true

[tool.ruff.per-file-ignores]
"tests/*" = ["D101", "D103"]

[tool.ruff.pylint]
max-args = 15
max-statements = 30

[tool.ruff.pydocstyle]
convention = "numpy"
